# pyshark

./: .pylintrc  README.md  pyproject.toml
pyshark/: __init__.py  __main__.py  manifest.py  shim.py
utils/: graph.py
